src/globals/styles/index.css
/* Archivos de estilos */
@import url("./inputs.css");
@import url("./autofill.css");

/* Fuentes */
@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --animate-blur-up: blur-up 0.3s ease-in forwards;
  --animate-blur-down: blur-down 0.8s ease-in forwards;
  --animate-rotation: rotation 0.8s linear infinite;
  --animate-shake: shake 0.35s ease-in;
  --animate-shimmer: shimmer 3s linear infinite;
  --animate-jump: jump 2s infinite;
  --animate-click-effect: clickEffect .5s cubic-bezier(.37,1.42,.37,1);

  @keyframes blur-up {
    0% {
      opacity: 0;
      transform: translateY(10px);
    }
    100% {
      opacity: 1;
      transform: translateY(0);
    }
  }

  @keyframes rotation {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }

  @keyframes shake {
    0% {
      transform: translateX(0);
    }
    20% {
      transform: translateX(-6px);
    }
    40% {
      transform: translateX(6px);
    }
    60% {
      transform: translateX(-4px);
    }
    80% {
      transform: translateX(4px);
    }
    100% {
      transform: translateX(0);
    }
  }

  @keyframes shimmer {
    0% {
      background-position: 200% 0;
    }
    100% {
      background-position: -200% 0;
    }
  }

  @keyframes jump {
    0%,
    100% {
      transform: translateY(0) scale(1.1, 0.8);
    }
    10% {
      transform: translateY(5px) scale(1, 1);
    }
    50% {
      transform: translateY(-10px) scale(0.9, 1.1);
    }
    90% {
      transform: translateY(0) scale(1, 1);
    }
  }

  @keyframes blur-down {
    0% {
      opacity: 0;
      transform: translateY(-5px);
      height: 90%;
    }
    100% {
      opacity: 1;
      transform: translateY(0);
      height: 100%;
    }
  }

  @keyframes clickEffect {
    0% {
      transform: scaleX(1) scaleY(1)
    }
    
    50% {
      transform: scaleX(0.95) scaleY(0.9)
    }

    100% {
      transform: scaleX(1)
    }
  }

  --default-font-family: "Inter", sans-serif;
  --font-inter: "Inter", sans-serif;
  --font-poppins: "Poppins", sans-serif;
  --font-dmsans: "DM sans", sans-serif;
}

html {
  scroll-behavior: smooth;
  overflow-x: clip;
  background-color: #fbf9fc;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html.dark {
  background-color: #0a0a0a;
}

html {
  border-color: #e5e7eb;
}

button {
  cursor: pointer;
}

/* Clase para ocultar la barra de navegación */
::-webkit-scrollbar {
  display: none;
}

